add semantic html structure and basic layout for assessment 2

--- a/index.html
+++ b/index.html
@@ -2,18 +2,31 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Core Trio Example</title>
+    <title>HTML Layout Example</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Hello, World!</h1>
-    <p>This is my first webpage with HTML, CSS, and JavaScript.</p>
+    <header>
+        <h1>My Webpage</h1>
+        <nav>
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
 
-    <button>Click Me</button>
+    <main>
+        <article>
+            <h2>Welcome to My Website</h2>
+            <p>This is an example of a semantic HTML5 structure.</p>
+            <p>We use HTML for structure, CSS for style, and JS for interaction.</p>
+        </article>
+    </main>
 
-    <script>
-        // JS code runs when the page loads
-        console.log("Page loaded successfully!");
-    </script>
+    <footer>
+        <p>&copy; 2025 My Webpage</p>
+    </footer>
 </body>
 </html>
